feat: add better style and content to page

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Aproveitamento Integral de Alimentos: A Mandioca</title>
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/style.css" />
 </head>
 <body>
     <header>
@@ -14,67 +14,50 @@
     <div class="container">
         <nav class="menu-lateral">
             <ul>
-                <li><a href="#mandioca">A Mandioca</a></li>
-                <li><a href="#cultivo">O cultivo</a></li>
-                <li><a href="#preparo-raiz">O Preparo: Raiz</a></li>
-                <li><a href="#preparo-ramas">O Preparo: Ramas</a></li>
-                <li><a href="#preparo-folhas">O Preparo: Folhas</a></li>
+                <li><a href="index.html">A Mandioca</a></li>
+                <li><a href="cultivo.html">O cultivo</a></li>
+                <li><a href="preparo.html">O Preparo</a></li>
             </ul>
         </nav>
 
         <main>
             <section id="mandioca">
                 <h2>A Mandioca</h2>
-                <p><strong>Nome científico:</strong> Manihot esculenta</p>
+
+                <p><strong>Nome científico:</strong> <em>Manihot esculenta Crantz</em></p>
                 <p><strong>Família:</strong> Euphorbiaceae</p>
-                <p><strong>Nomes populares:</strong> Mandioca, aipim, macaxeira</p>
-                <p><strong>Origem:</strong> América do Sul, especialmente Brasil</p>
-                <p><strong>Importância:</strong> Rico em carboidratos, é alimento base em diversas culturas e sua produção é essencial para a segurança alimentar.</p>
-                <img src="img/images.jpeg" alt="Mandioca">
-                <p>A mandioca é uma planta nativa da América do Sul, amplamente cultivada em regiões tropicais e subtropicais. É uma fonte importante de carboidratos e é utilizada em diversas preparações culinárias.</p>
-            </section>
+                <p><strong>Nomes populares:</strong> Mandioca, aipim, macaxeira, castelinha, uaipi, mandioca-doce, mandioca-mansa, maniva, maniveira.</p>
 
-            <section id="cultivo">
-                <h2>O Cultivo da Mandioca</h2>
-                <p>O solo deve ser bem drenado e descompactado. O plantio é feito com manivas em sulcos ou covas de 10 cm. A adubação exige nutrientes específicos como calcário e fertilizantes. Cuidados incluem controle de pragas, irrigação e monitoramento.</p>
-                <img src="img/CultivoMandioca.jpg" alt="Cultivo da Mandioca">
-            </section>
+                <p><strong>Origem e Distribuição:</strong> A mandioca é nativa da América do Sul, com o Brasil Central sendo considerado o provável centro de origem e domesticação. Sua distribuição se estende desde o Arizona (EUA) até a Bacia do Rio da Prata (Brasil, Bolívia, Paraguai, Uruguai e Argentina), incluindo o México como área importante de concentração.</p>
 
-            <section id="preparo-raiz">
-                <h2>O Preparo: Raiz</h2>
+                <p><strong>Importância:</strong> Rica em carboidratos, a mandioca é alimento básico em diversas culturas, sendo fundamental para a segurança alimentar de milhões de pessoas, especialmente em regiões tropicais e subtropicais.</p>
+                <img src="img/images.jpeg" alt="Mandioca" />
+                <p>A mandioca é uma planta perene cultivada principalmente pela sua raiz tuberosa, que é fonte significativa de amido. Seu ciclo varia entre 6 e 36 meses, dependendo da cultivar e das condições ambientais.</p>
+                
+                <p><strong>Classificação das Cultivares:</strong></p>
                 <ul>
-                    <li><strong>Cozida:</strong> Cozida em agua com sal ate ficar macia</li>
-                    <li><strong>Frita:</strong> Cozida, cortada e  frita ate dourar</li>
-                    <li><strong>Purê:</strong> Cozida e amassada com manteiga ou azeite.</li>
+                    <li><strong>Precoces:</strong> ciclo de 10 a 14 meses;</li>
+                    <li><strong>Semiprecoces:</strong> ciclo de 14 a 16 meses;</li>
+                    <li><strong>Tardias:</strong> ciclo superior a 18 meses.</li>
                 </ul>
-                <p>A raiz da mandioca pode ser consumida cozida, frita ou assada. É importante cozinhar bem a raiz para eliminar substâncias tóxicas presentes em algumas variedades.</p>
-                <img src="img/macaxeira-cozida.jpg" alt="Mandioca Cozida">
-            </section>
-
-            <section id="preparo-ramas">
-                <h2>O Preparo: Ramas</h2>
-                <p>As ramas da mandioca podem ser utilizadas em saladas, refogados ou como acompanhamento. Elas são ricas em fibras e nutrientes.</p>
-                <img src="img/preaparo-ramas.jpg" alt="Ramas da Mandioca">
-            </section>
-
-            <section id="preparo-folhas">
-                <h2>O Preparo: Folhas</h2>
+                <img src="img/mandioca2.jpg" alt="">
+                <p><strong>Variedades Principais no Brasil:</strong></p>
                 <ul>
-                    <li><strong>Refogada:</strong> Cozidas com temperos, servidas como acompanhamento.</li>
-                    <li><strong>Sopa:</strong> Acrescentadas em sopas para sabor e nutrientes.</li>
+                    <li><strong>Mandioca mansa (aipim/macaxeira):</strong> baixo teor de ácido cianídrico (HCN), segura para consumo após cozimento.</li>
+                    <li><strong>Mandioca brava:</strong> alto teor de HCN, requer processamento específico (fermentação, secagem) para eliminar a toxicidade.</li>
                 </ul>
-                <p>As folhas da mandioca são comestíveis e podem ser utilizadas em sopas, refogados ou como recheio. Elas são ricas em proteínas e vitaminas.</p>
-                <img src="img/folhas-de-mandioca.jpg" alt="Folhas da Mandioca">
+
+                <p><strong>Usos Culinários e Culturais:</strong> Versátil na culinária brasileira, a mandioca é usada para produzir farinha, polvilho, tucupi e preparações tradicionais como farofa, pirão e beiju. Além de seu valor nutricional, tem papel cultural em festas e tradições populares.</p>                
             </section>
         </main>
     </div>
 
     <script>
-    document.addEventListener('keydown', function(e) {
-      if (e.key === 'Tab') {
-        document.body.classList.add('user-is-tabbing');
-      }
-    });
-  </script>
+        document.addEventListener('keydown', function(e) {
+            if (e.key === 'Tab') {
+                document.body.classList.add('user-is-tabbing');
+            }
+        });
+    </script>
 </body>
 </html>
